# MagneticSensorTracking

./: .envrc  .gitignore  .gitmodules  README.md  \  flake.nix  offset_cal.csv  offset_cal_elipse.npy  pyproject.toml  requirements.txt  result  xelbdj2_all.f
.devenv/: profile
.devenv/state/: poetry.lock.checksum
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dppxpiynl5ayjk0k72k1wbv8miins7j0-source  m5hgqpck2rin05yrr83zxcdxx64ilpz1-source  rkdgpxdbw09n3dhcgbmqykw1dfb1rfqa-source  sdq4qjrpndc8ymk432nxmb2brwly2dc3-source  yqq8h2j0zmfqfpznpbzhmm2dbvf3dl5d-source
.github/: settings.yml
Experiments/: Analyze Data.ipynb  Look at gamma knife  SimulateMagneticField.ipynb  xelbdj2_all.py
Experiments/.ipynb_checkpoints/: Analyze Data-checkpoint.ipynb
cachix/: ploop.nix
circuit/MLX90393_board/: MLX90393_board.kicad_pcb  MLX90393_board.kicad_pro  MLX90393_board.kicad_sch  MLX90393_board.kicad_sch-bak  MLX90393_board.kicad_sch_old  MLX_array.kicad_sch  fp-info-cache
circuit/MLX90393_board2/: MLX90393_board2.kicad_pcb  MLX90393_board2.kicad_pro  MLX90393_board2.kicad_sch  MLX90393_board2.kicad_sch_old  MLX_array.kicad_sch  MagneticSensors.bak  fp-info-cache  fp-lib-table  sym-lib-table
circuit/MLX90393_board3/: MLX90393_board.kicad_prl  MLX90393_board2.kicad_prl  MLX90393_board3.kicad_pcb  MLX90393_board3.kicad_prl  MLX90393_board3.kicad_pro  MLX90393_board3.kicad_sch  MLX_array.kicad_sch  MagneticSensors.kicad_sym  ~MLX90393_board3.kicad_pcb.lck
circuit/MLX90393_board4/: MLX90393_board3.kicad_pro
logs/: 2024-04-16 22:53:24.424792.npz  2024-04-17 03:11:57.942345.npz  2024-04-17 14:17:03.681772.npz  20240417-142012.npz  20240417-142254-546191.npz
logs/20240417-143725-097081/: 20240417-143725-475663.npz  20240417-143726-289160.npz  20240417-143726-793234.npz  20240417-143727-297777.npz  20240417-143727-802120.npz  20240417-143728-306415.npz  20240417-143728-809477.npz  20240417-143729-312744.npz  20240417-143729-816676.npz  20240417-143730-319567.npz  20240417-143730-822810.npz  20240417-143731-326554.npz  20240417-143731-829668.npz  20240417-143732-337059.npz  20240417-143732-840171.npz  20240417-143733-343996.npz  20240417-143733-888400.npz  20240417-143734-391900.npz
logs/20240417-151706-871110/: 20240417-151707-273252.npz  20240417-151708-439849.npz  20240417-151708-944019.npz  20240417-151709-447601.npz  20240417-151709-952297.npz  (+192 more)
magneticsensortracking/: __init__.py
nix/python/: derivations.nix  packages.nix  pyproject.toml
scripts/: server.py  server2.py  test_compute.py  test_temp.py  test_temperature_comp.py
(+10887 files in other folders)
