[tool.poetry]
name = "magneticsensortracking"
version = "0.1.0"
description = ""
authors = ["purepani <pani0028@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
tlv493d = {version="^1.0.1", optional=true}
lsm303d = {version="^0.0.5", optional=true}
adafruit-circuitpython-mlx90939 = {version="^1.1.1", optional=true}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
