[project]
name = "magneticsensortracking"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "numpy",
    "einops",
    "pandas",
    "flask>=3.0.0",
    "flask-socketio>=5.3.6",
    "eventlet>=0.33.3",
    "flask-sock>=0.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
sensors = [
      "adafruit-circuitpython-mlx90393",
      "adafruit-circuitpython-tlv493d",
      "lsm303d"
]
printer = [
  "printrun"
]
camera = [
  "picamera"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
startserver = {call = "magneticsensortracking.ui:main"}
