[project]
name = "magneticsensortracking"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "numpy",
    "einops",
    "pandas",
    "flask>=3.0.0",
    "flask-socketio>=5.3.6",
    "eventlet>=0.33.3",
    "flask-sock>=0.7.0",
    "python-socketio>=5.10.0",
    "quart>=0.19.3",
    "aiortc",
    "uvicorn>=0.23.2",
    "scipy>=1.9.3",
    "requests>=2.31.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
sensors = [
      #"adafruit-circuitpython-mlx90393",
      "adafruit-circuitpython-mlx90393@git+https://github.com/purepani/Adafruit_CircuitPython_MLX90393#egg=main",
      "adafruit-circuitpython-tlv493d",
      "lsm303d"
]
printer = [
  #"printrun"
]
camera = [
  #"picamera2"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
#startserver = {call = "magneticsensortracking.ui:main"}
startserver = "uvicorn --factory magneticsensortracking.ui:main"
